# Calculator_CSC478B

./: AboutPopup.ui  CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathengine.cpp  mathengine.h  unitsconversion.cpp  unitsconversion.h
Gtest/: CMakeLists.txt  MathEngineTest.cpp  main.cpp
